--- a/css/tooplate-gymso-style.css
+++ b/css/tooplate-gymso-style.css
@@ -360,7 +360,7 @@ a:focus {
   -----------------------------------------*/
 
 .hero {
-  background-image: url("../images/pic.jpg");
+  background-image: url("../images/hulee.jpg");
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
